--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="Guilherme César, Kauê José, Maurício Rodrigues, Pedro Vinicius">
+<meta name="author" content="Maurício Rodrigues">
 
 <title>Cultura Data-Driven: Oportunidade, Desafios e Iniciativas</title>
 <style>
@@ -90,7 +90,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
       <div>
       <div class="quarto-title-meta-heading">Autor</div>
       <div class="quarto-title-meta-contents">
-               <p>Guilherme César, Kauê José, Maurício Rodrigues, Pedro Vinicius </p>
+               <p>Maurício Rodrigues </p>
             </div>
     </div>
       
@@ -266,6 +266,9 @@ F-statistic: 35.37 on 2 and 29 DF,  p-value: 1.663e-08</code></pre>
 3   8 209.21429</code></pre>
 </div>
 </div>
+<p>Referências:</p>
+<p>https://cran.r-project.org/web/packages/explore/vignettes/explore_mtcars.html</p>
+<p>http://leg.ufpr.br/~paulojus/ce223/ce223/ce223se8.html</p>
 
 </main>
 <!-- /main column -->
